Define renderer and move script to its own file

--- a/index.html
+++ b/index.html
@@ -4,14 +4,7 @@
   <script src="http://threejs.org/build/three.min.js"></script>
 </head>
 <body>
-  <script>
-    // Scene is where objects, cameras, lights are added
-    var scene    = new THREE.Scene(); 
-    // Perspective camera makes far things small and close things big
-    var camera   = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-    // Renderer can render things in WebGL or Canvas 2D
-    var renderer = new THREE.WebGLRenderer();
-  </script>
   <h1>Three.js texturizer</h1>
+  <script src="renderer.js"></script>
 </body>
 </html>
